<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="130dp"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        android:background="#ffffff"
        android:textColor = "#0F0E0E"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/edit_pass"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:background="#ffffff"
        android:textColor = "#0F0E0E"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#3F9CE9"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor = "#F8F7F6"
            android:textSize="15dip"
            android:text="@string/not_registered"/>

        <Button
            android:id="@+id/text_register"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textSize="15dip"
            android:background="#0000"
            android:textColor = "#8710D6"
            android:text="@string/register"/>
    </LinearLayout>


</LinearLayout>